fix - horizontal scroll on 768 screen size (#194)

--- a/aemeds/blocks/cards/cards.css
+++ b/aemeds/blocks/cards/cards.css
@@ -115,7 +115,7 @@
   aspect-ratio: 91 / 42;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .cards .card .card-thumbnail img {
     aspect-ratio: 375 / 211;
   }
